[package]
name = "loom"
version = "0.1.0"
edition = "2021"
authors = ["Peter McEvoy <peter@tlon.io>"]
readme = "README.md"
repository = "https://github.com/mcevoypeter/urbit"
keywords = ["urbit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
