[package]
name = "nock"
version = "0.1.0"
edition = "2021"
authors = ["Peter McEvoy <peter@tlon.io>"]
readme = "README.md"
repository = "https://github.com/mcevoypeter/nock"
keywords = ["urbit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"loom" = { path = "../loom" }

[features]
default = ["iterative_tree"]
# Interpreter type
iterative_tree = []
recursive_tree = []
